# trinops

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SUPPORTED_TRINO_VERSIONS  astro.config.mjs  mise.toml  mkdocs.yml  package-lock.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: deploy-site.yml  publish.yml  test.yml
docs/: index.md
docs/docs/: cli.md  configuration.md  getting-started.md  library.md  schema.md  tui.md
docs/notes/: lsp-server.md  missing-command-shows-help.md  schema-raw-json-dump.md  schema-show-nested-navigation.md
docs/overrides/: home.html
docs/overrides/assets/javascripts/: installer-selector.js
docs/overrides/assets/stylesheets/: custom.css
docs/plans/: 2026-03-10-trino-progress-design.md  2026-03-10-trino-progress-implementation.md  2026-03-10-trinops-design.md  2026-03-10-trinops-implementation.md
docs/superpowers/plans/: 2026-03-12-drop-sql-backend.md  2026-03-12-vcr-version-compat.md  2026-03-14-enriched-query-detail.md  2026-03-14-schema-cache-search.md  2026-03-16-documentation-website.md
docs/superpowers/specs/: 2026-03-12-kill-query-design.md  2026-03-12-tui-cluster-header-design.md  2026-03-12-vcr-version-compat-design.md  2026-03-14-enriched-query-detail-design.md  2026-03-14-schema-cache-search-design.md  2026-03-16-documentation-website-design.md
scripts/: record_trino.py  screenshot.py
skills/trinops/: SKILL.md
src/content/docs/docs/: cli.mdx  configuration.mdx  getting-started.mdx  library.mdx  schema.mdx  tui.mdx
src/pages/: index.astro
src/styles/: custom.css
src/trino_progress/: __init__.py  poller.py  progress.py  stats.py
src/trino_progress/display/: __init__.py  stderr.py  tqdm.py  web.py
src/trinops/: __init__.py  auth.py  backend.py  client.py  config.py  formatting.py  models.py
src/trinops/cli/: __init__.py  commands.py  formatting.py
src/trinops/mcp/: __init__.py  server.py
src/trinops/progress/: __init__.py  poller.py  progress.py
src/trinops/progress/display/: __init__.py  stderr.py  tqdm.py  web.py
src/trinops/schema/: __init__.py  cache.py  fetcher.py  search.py
src/trinops/tui/: __init__.py  app.py  detail.py
src/trinops/tui/tabs/: __init__.py  errors.py  overview.py  stats.py  tables.py
tests/: conftest.py  test_auth.py  test_backend.py  test_cli.py  test_cli_config.py  test_cli_schema.py  test_client.py  test_config.py  test_detail_tabs.py  test_display_stderr.py  test_display_tqdm.py  test_display_web.py  test_formatting.py  test_http_backend.py  test_integration.py  test_mcp.py  test_models.py  test_poller.py  test_progress.py  test_schema_cache.py  test_schema_fetcher.py  test_schema_search.py  test_stats.py  test_trinops_integration.py  test_tui.py  test_version_compat.py
tests/cassettes/trino-410/: metadata.json  responses.yaml
tests/cassettes/trino-430/: metadata.json  responses.yaml
tests/cassettes/trino-449/: metadata.json  responses.yaml
