[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trinops"
version = "0.1.0"
description = "Trino query monitoring: CLI, TUI dashboard, and progress library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "trino>=0.320",
    "tomli>=1.0; python_version < '3.11'",
    "keyring>=23.0",
]

[project.optional-dependencies]
tqdm = ["tqdm>=4.60"]
cli = ["typer>=0.9", "rich>=13.0"]
tui = ["textual>=0.40"]
all = ["trinops[tqdm]", "trinops[cli]", "trinops[tui]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tqdm>=4.60",
    "typer>=0.9",
    "rich>=13.0",
    "textual>=0.40",
]

[project.scripts]
trinops = "trinops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trinops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
