[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trinops"
dynamic = ["version"]
description = "Trino query monitoring: CLI, TUI dashboard, and progress library"
readme = "README.md"
license = "LicenseRef-PolyForm-Shield-1.0.0"
requires-python = ">=3.10"
authors = [
    { name = "Loki Coyote", email = "loki@lokkju.com" },
]
keywords = ["trino", "monitoring", "cli", "tui", "queries"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "trino>=0.320",
    "tomli>=1.0; python_version < '3.11'",
    "keyring>=23.0",
    "typer>=0.9",
    "rich>=13.0",
    "textual>=0.40",
]

[project.urls]
Homepage = "https://github.com/lokkju/trinops"
Repository = "https://github.com/lokkju/trinops"
Issues = "https://github.com/lokkju/trinops/issues"

[project.optional-dependencies]
tqdm = ["tqdm>=4.60"]

[project.scripts]
trinops = "trinops.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/trinops"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tqdm>=4.60",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
